# wp-cloud-atomic-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
atomic_sdk/: __init__.py  client.py  exceptions.py  models.py
atomic_sdk/api/: backups.py  base.py  client.py  cron.py  custom_certificates.py  edge_cache.py  email.py  metrics.py  migrations.py  response_tickets.py  security.py  servers.py  sites.py  ssh.py  tasks.py  utility.py
examples/: README.md
examples/backups/: 01_create_and_list_backups.py  02_get_and_download_backup.py  03_download_streaming.py  99_delete_ondemand_backup.py
examples/client/: 01_manage_client_meta.py
examples/cron/: 01_manage_cron.py
examples/custom_certificates/: 01_install_certificate.py  02_manage_certificate.py
examples/edge_cache/: 01_manage_cache.py
examples/email/: 01_list_blocked_domains.py
examples/metrics/: 01_query_site_metrics.py  02_visitor_metrics.py  03_php_metrics.py  04_uniques_and_views_metrics.py  05_mysql_metrics.py  06_cgroup_metrics.py
examples/migrations/: 01_prepare_destination_site.py  02_create_migration_with_new_key.py  03_run_preflight_and_monitor.py  04_start_migration_and_monitor.py
examples/security/: 01_manage_firewall_rules.py
examples/servers/: 01_get_server_info.py
examples/sites/: 00_check_can_host_domain.py  01_create_and_get_site.py  02_manage_software.py  03_manage_aliases.py  04_manage_metadata.py  05_manage_ssl.py  06_get_phpmyadmin_url.py  07_site_list.py  08_allow_ssh_migration.py  99_delete_site.py
examples/ssh/: 01_manage_site_ssh_users.py  02_manage_public_keys.py  (+4 more)
(+8 files in other folders)
